--- a/public/css/style.css
+++ b/public/css/style.css
@@ -789,7 +789,6 @@ h2 {
   margin: 1em auto;
   width: 35%;
 }
-
 .card-galeria {
   padding: 0;
   margin: 0 0.5em 0.5em 0;
@@ -1274,6 +1273,20 @@ h2 {
   width: auto;
   height: 1.3em;
   padding: 0 0.5em;
+}
+.info-text-block{
+  line-height: 1.7em;
+  font-size: 1em;
+}
+.info-text-bullets li{
+  margin: 0 0 0 1.5em;
+  padding: 0;
+  width: 100%;
+  text-align: left;
+  font-size: .55em;
+}
+.info-text-bullets li::marker{
+  /*font-size: .55em;*/
 }
 
 /*ADMIN*/
