--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1806,7 +1806,7 @@ h2 {
 }
 .nosotras-info{
   font-size: .8em !important;
-  margin: .5em !important;
+  margin: .5em 0 !important;
 }
 .nosotras-img{
   color: #6A3381 !important;
