--- a/public/css/style.css
+++ b/public/css/style.css
@@ -136,6 +136,9 @@ h2 {
 }
 .horizontal-scroll-wrapper > div > img {
   width: 100%;
+  object-fit: cover;
+  object-position: center center;
+  height: 5em;
 }
 .footer .icons-footer {
   text-align: center;
